--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,8 @@
         Signed in as <strong><%= current_user.name %></strong>!
         <%= link_to "Sign out", signout_path, id: "sign_out" %>
       <% else %>
-        <%= link_to "Sign in with Google", "/auth/google_oauth2", id: "sign_in" %>
+        <%= link_to "Sign in with Google", "/auth/google_oauth2", id: "sign_in_google" %>
+        <%= link_to "Sign in with GitHub", "/auth/github", id: "sign_in_github" %>
       <% end %>
     </div>
   <div>
