--- a/back-end/app/assets/stylesheets/developer.scss
+++ b/back-end/app/assets/stylesheets/developer.scss
@@ -176,7 +176,7 @@ html {
       top: 52px;
       padding: 0;
       width: 220px;
-      overflow-y: auto;
+      overflow-y: hidden;
       background: #191919;
 
       .new-context-container {
@@ -337,6 +337,7 @@ html {
     }
     .content-container {
       padding-left: 220px;
+      height:100%;
     }
   }
 }
@@ -352,7 +353,7 @@ ul.sidebar {
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
-    overflow: hidden;
+
 }
 
 ul.sidebar>li {
@@ -637,4 +638,222 @@ ul.sidebar .sidebar-group-members>img {
 
 ul.sidebar .sidebar-group-members>img:hover {
     opacity: 0.5
+}
+
+.split-view {
+    position: relative;
+    overflow: hidden
+}
+
+.split-view .split-view-list {
+    width: 354px;
+    border-right: 1px solid #ddd
+}
+
+.split-view .split-view-list .split-view-list-refresh-notice {
+    position: relative;
+    padding: 10px 15px;
+    background: #ffc;
+    border-bottom: 1px solid #ddd;
+    font-size: 13px;
+    font-weight: bold;
+    cursor: pointer
+}
+
+.split-view .split-view-list .split-view-list-refresh-notice:hover {
+    background: #ffffba
+}
+
+.split-view .split-view-list .split-view-list-refresh-notice>i {
+    position: absolute;
+    top: 14px;
+    right: 15px
+}
+
+.split-view .split-view-list .split-view-list-gists {
+    overflow-y: auto
+}
+
+.split-view .split-view-content {
+    position: absolute;
+    top: 0;
+    left: 355px
+}
+
+
+.filter-bar {
+    position: relative;
+    background: #f5f5f5;
+    padding: 12px 14px 11px 14px;
+    border-bottom: 1px solid #ddd
+}
+
+.filter-bar .btn-group {
+    margin-top: 2px
+}
+
+.filter-bar .btn-group .btn.active {
+    cursor: default
+}
+
+.filter-bar .filter-bar-sorter {
+    position: absolute;
+    right: 15px;
+    top: 18px;
+    font-size: 12px
+}
+
+.filter-bar .filter-bar-sorter a {
+    display: inline-block;
+    margin-left: 1px;
+    color: #999;
+    text-decoration: none
+}
+
+.filter-bar .filter-bar-sorter a.filter-by-created {
+    width: 60px;
+    text-align: right
+}
+
+.filter-bar .filter-bar-sorter a.filter-by-updated {
+    width: 65px;
+    text-align: right
+}
+
+.filter-bar .filter-bar-sorter a.filter-active {
+    color: #333;
+    opacity: 1.0
+}
+
+.filter-bar .filter-bar-sorter a:hover {
+    color: #333
+}
+
+.filter-bar .filter-bar-sorter a {
+    margin-left: 5px
+}
+
+.no-gists {
+    margin-top: 30px;
+    text-align: center
+}
+
+.split-gist {
+    position: relative;
+    padding: 15px 15px 14px 15px;
+    border-bottom: 1px solid #ddd;
+    cursor: pointer;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none
+}
+
+.split-gist.gist-selected {
+    background: #f5f5f5;
+    box-shadow: inset 1px 1px 3px #ddd
+}
+
+.split-gist.gist-dragged {
+    background: #ffc
+}
+
+.split-gist .split-gist-header {
+    position: relative
+}
+
+.split-gist .split-gist-header::after {
+    content: ".";
+    visibility: hidden;
+    display: block;
+    height: 0;
+    clear: both
+}
+
+.split-gist .split-gist-header img {
+    width: 28px;
+    height: 28px;
+    margin-right: 7px;
+    float: left
+}
+
+.split-gist .split-gist-header .gist-meta {
+    float: left;
+    line-height: 14px
+}
+
+.split-gist .split-gist-header .gist-meta .gist-name {
+    width: 259px;
+    font-size: 12px;
+    font-weight: bold;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis
+}
+
+.split-gist .split-gist-header .gist-meta .gist-created-updated {
+    font-size: 10px;
+    color: #777
+}
+
+.split-gist .split-gist-header .gist-flags {
+    position: absolute;
+    top: -3px;
+    right: 2px
+}
+
+.split-gist .split-gist-header .gist-flags>i {
+    margin-right: 2px
+}
+
+.split-gist:hover .split-gist-grapple {
+    display: block
+}
+
+.split-gist .split-gist-grapple {
+    display: none;
+    position: absolute;
+    top: 15px;
+    left: 5px;
+    width: 5px;
+    height: 28px;
+    background: url("/images/icons/gist-grapple.png") no-repeat 0 3px;
+    cursor: move
+}
+
+.split-gist .gist-description {
+    height: 32px;
+    margin-top: 8px;
+    margin-left: 33px;
+    font-size: 12px;
+    line-height: 16px;
+    overflow: hidden
+}
+
+.split-gist .gist-labels {
+    margin-top: 8px;
+    margin-left: 33px;
+    font-size: 11px;
+    line-height: 11px
+}
+
+.split-gist .gist-labels>span {
+    display: inline-block;
+    margin-right: 0;
+    margin-bottom: -3px
+}
+
+.split-gist .gist-labels>span.gist-label {
+    margin-bottom: 3px
+}
+
+.split-gist-droppable {
+    padding: 2px 10px;
+    font-size: 11px;
+    font-weight: bold;
+    background: #fff;
+    border: 1px solid #777;
+    box-shadow: 0 1px 2px #777
 }
