--- a/back-end/app/views/layouts/developer.html.erb
+++ b/back-end/app/views/layouts/developer.html.erb
@@ -248,12 +248,12 @@
                   <div class="focus-view-header-controls">
                     <div class="focus-view-header-controls-left">
                       <div class="btn-group">
-                        <button class="btn btn-sm tip-top edit-gist">
+                        <button class="btn btn-secondary btn-sm tip-top edit-gist">
                         <i class="fa fa-pencil">
                         </i>
                         Edit
                         </button>
-                        <button class="btn btn-sm tip-top delete-gist" data-hasqtip="true" oldtitle="Delete Gist">
+                        <button class="btn btn-secondary btn-sm tip-top delete-gist" data-hasqtip="true" oldtitle="Delete Gist">
                         <i class="fa fa-trash">
                         </i>
                         Delete
@@ -262,21 +262,21 @@
                     </div>
                     <div class="focus-view-header-controls-right">
                       <div class="btn-group">
-                        <button class="btn btn-sm tip-top email-gist">
+                        <button class="btn btn-secondary btn-sm tip-top email-gist">
                         <i class="fa fa-envelope">
                         </i>
                         </button>
-                        <button class="btn btn-sm tip-top tweet-gist">
+                        <button class="btn btn-secondary btn-sm tip-top tweet-gist">
                         <i class="fa fa-twitter">
                         </i>
                         </button>
-                        <button class="btn btn-sm tip-top share-gist" data-hasqtip="true" oldtitle="Export / Embed Gist">
-                        <i class="fa fa-share">
+                        <button class="btn btn-secondary btn-sm tip-top share-gist" data-hasqtip="true" oldtitle="Export / Embed Gist">
+                        <i class="fa fa-share-square-o">
                         </i>
                         </button>
                       </div>
-                      <button class="btn btn-sm tip-top star-gist">
-                      <i class="fa fa-star-empty">
+                      <button class="btn btn-secondary btn-sm tip-top star-gist">
+                      <i class="fa fa-star-o">
                       </i>
                       Star
                       </button>
@@ -295,9 +295,7 @@
                   </div>
                   <div class="focus-view-header-right">
                     <span class="focus-view-num-files">
-                      <i class="fa fa-file-alt">
-                      </i>
-                      4 Files
+                      <i class="fa fa-file-o"></i> 4 Files
                     </span>
                   </div>
                 </div>
@@ -312,7 +310,7 @@
                           <div class="gist-file-name" style="width: 461px;">
                             <i class="gist-toggle-icon icon-chevron-down">
                             </i>
-                            <i class="icon-file-alt">
+                            <i class="fa fa-file-o">
                             </i>
                             0_reuse_code.js
                           </div>
@@ -321,15 +319,15 @@
                               JavaScript
                             </span>
                             <div class="btn-group">
-                              <button class="btn btn-sm copy-gist" data-clipboard-text='// Use Gists to store code you would like to remember later on
+                              <button class="btn btn-secondary btn-sm copy-gist" data-clipboard-text='// Use Gists to store code you would like to remember later on
                               console.log(window); // log the "window" object to the console
                               '>
-                              <i class="icon-copy">
+                              <i class="fa fa-copy">
                               </i>
                               Copy
                               </button>
-                              <a class="btn btn-sm" href="https://gist.githubusercontent.com/hatu87/f125ccab6608b410a74b87d480d0f753/raw/2b8a5ccf55d94d29328a24ef3913ffb54841429c/0_reuse_code.js" target="_blank">
-                                <i class="icon-external-link">
+                              <a class="btn btn-secondary btn-sm" href="https://gist.githubusercontent.com/hatu87/f125ccab6608b410a74b87d480d0f753/raw/2b8a5ccf55d94d29328a24ef3913ffb54841429c/0_reuse_code.js" target="_blank">
+                                <i class="fa fa-external-link">
                                 </i>
                                 Raw
                               </a>
@@ -339,9 +337,11 @@
                           </div>
                         </div>
                         <div class="gist-file-code" style="display: block;">
-                                                                              <pre><code><span class="token comment" spellcheck="true">// Use Gists to store code you would like to remember later on</span>
-                                              console<span class="token punctuation">.</span><span class="token function">log</span><span class="token punctuation">(</span>window<span class="token punctuation">)</span><span class="token punctuation">;</span> <span class="token comment" spellcheck="true">// log the "window" object to the console</span>
-                        </code></pre>
+                          <pre>
+                            <code><span class="token comment" spellcheck="true">// Use Gists to store code you would like to remember later on</span>
+console<span class="token punctuation">.</span><span class="token function">log</span><span class="token punctuation">(</span>window<span class="token punctuation">)</span><span class="token punctuation">;</span> <span class="token comment" spellcheck="true">// log the "window" object to the console</span>
+</code>
+                          </pre>
                       </div>
                     </div>
                   </div>
@@ -351,7 +351,7 @@
                         <div class="gist-file-name" style="width: 461px;">
                           <i class="gist-toggle-icon icon-chevron-down">
                           </i>
-                          <i class="icon-file-alt">
+                          <i class="fa fa-file">
                           </i>
                           1_ruby_quicksort.rb
                         </div>
@@ -658,8 +658,8 @@
                       </div>
                     </div>
                   </div>
-                  <button class="btn btn-sm add-another-file">
-                  <i class="icon-plus">
+                  <button class="btn btn-secondary btn-sm add-another-file">
+                  <i class="fa fa-plus">
                   </i>
                   Add Another File
                   </button>
