add guest template

--- a/back-end/app/assets/stylesheets/application.scss
+++ b/back-end/app/assets/stylesheets/application.scss
@@ -1,5 +1,7 @@
-@import "bootstrap";
+@import "materialize";
+
 @import "font-awesome";
 @import "material_icons";
 @import "prism";
-@import "developer";
+// @import "developer";
+@import "guest_layout";
