--- a/back-end/app/views/home/index.html.erb
+++ b/back-end/app/views/home/index.html.erb
@@ -8,7 +8,7 @@
       </h1>
       <div class="row center">
         <h5 class="header col s12 light">
-        This is a web-based chat application
+        This is a web-snippet code application
         </h5>
       </div>
       <div class="row center">
@@ -36,8 +36,9 @@
           <h5 class="center">
           Speeds up development
           </h5>
+          
           <p class="light">
-            We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.
+            We did most of the heavy lifting for you to provide a code snippet that saving time spending for typing blocks of code repeatly, so you will have much time to understand new blocks of code and thinking about the algorithms and that increasing productivity for developers.
           </p>
         </div>
       </div>
@@ -51,8 +52,9 @@
           <h5 class="center">
           User Experience Focused
           </h5>
+          
           <p class="light">
-            By utilizing elements and principles of Material Design, we were able to create a framework that incorporates components and animations that provide more feedback to users. Additionally, a single underlying responsive system across all platforms allow for a more unified user experience.
+            By utilizing code snippets, we support to generate snippet conventions for project or company, they support to work in a group project easily: easy to review other developer code, easy to interact to other developers, easy to join new project, new company. Finally, it decreases making ridiculous typing mistakes. And all of that provide smoother experience for developers.
           </p>
         </div>
       </div>
@@ -67,7 +69,7 @@
           Easy to work with
           </h5>
           <p class="light">
-            We have provided detailed documentation as well as specific code examples to help new users get started. We are also always open to feedback and can answer any questions a user may have about Materialize.
+            We have provided detailed documentation as well as specific code examples to help new users get started. We are also always open to feedback and can answer any questions a user may have about Code-Pieces.
           </p>
         </div>
       </div>
@@ -79,7 +81,7 @@
     <div class="container">
       <div class="row center">
         <h5 class="header col s12 light">
-        A modern responsive front-end framework based on Material Design
+        
         </h5>
       </div>
     </div>
@@ -100,7 +102,7 @@
         Contact Us
         </h4>
         <p class="left-align light">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat. Etiam pellentesque tristique arcu, non consequat magna fermentum ac. Cras ut ultricies eros. Maecenas eros justo, ullamcorper a sapien id, viverra ultrices eros. Morbi sem neque, posuere et pretium eget, bibendum sollicitudin lacus. Aliquam eleifend sollicitudin diam, eu mattis nisl maximus sed. Nulla imperdiet semper molestie. Morbi massa odio, condimentum sed ipsum ac, gravida ultrices erat. Nullam eget dignissim mauris, non tristique erat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;
+          Buu Le, Minh Dinh, Tu Hoang - students of CoderSchool.
         </p>
       </div>
     </div>
@@ -111,7 +113,7 @@
     <div class="container">
       <div class="row center">
         <h5 class="header col s12 light">
-        A modern responsive front-end framework based on Material Design
+        
         </h5>
       </div>
     </div>
