finish add new snippet

--- a/back-end/app/views/snippets/_form.html.erb
+++ b/back-end/app/views/snippets/_form.html.erb
@@ -24,8 +24,8 @@
     <%= f.number_field :created_by %>
   </div>
   <div class="field">
-    <%= f.label :scope %><br>
-    <%= f.text_field :scope %>
+    <%= f.label :language %><br>
+    <%= f.text_field :language %>
   </div>
   <div class="field">
     <%= f.label :tag_trigger %><br>
