--- a/back-end/app/assets/stylesheets/developer/layout/_splitGist.scss
+++ b/back-end/app/assets/stylesheets/developer/layout/_splitGist.scss
@@ -20,6 +20,10 @@
     background: #f5f5f5;
     box-shadow: inset 1px 1px 3px #ddd
 }
+.split-gist.gist-hovered {
+    // background: #f5f5f5;
+    box-shadow: inset 1px 1px 3px #ddd
+}
 
 .split-gist.gist-dragged {
     background: #ffc
