--- a/back-end/app/views/developer/snippets/_form.html.erb
+++ b/back-end/app/views/developer/snippets/_form.html.erb
@@ -22,6 +22,7 @@
       </div>
       <div class="gist-editor-container">
         <div class="gist-editor" id='editor'></div>
+        <%= f.hidden_field :contents, id: 'editor-contents' %>
       </div>
     </div>
   </div>
@@ -31,6 +32,13 @@
 
 <script type="text/javascript">
 var editor = ace.edit("editor");
-  editor.setTheme("ace/theme/monokai");
-  editor.getSession().setMode("ace/mode/javascript");
+  // editor.setTheme("ace/theme/monokai");
+  editor.getSession().setMode("ace/mode/ruby");
+
+  editor.getSession().on('change', function(e) {
+    // e.type, etc
+
+    $('#editor-contents').val(editor.getValue());
+    // console.log(e);
+  });
 </script>
