--- a/back-end/app/views/layouts/developer.html.erb
+++ b/back-end/app/views/layouts/developer.html.erb
@@ -191,7 +191,7 @@
               </div>
               <div class="split-view-list-gists" style="height: 600px">
                 <% @snippets.all.each do |snippet| %>
-                <div class="split-gist ui-draggable gist-selected" data-id="f125ccab6608b410a74b87d480d0f753">
+                <div class="split-gist ui-draggable <%= selected_snippet_class(snippet)%>" data-id='<%= snippet.id %>'>
                   <div class="split-gist-grapple">
                   </div>
                   <div class="split-gist-header">
@@ -202,7 +202,7 @@
                         <%= snippet.name %>
                       </div>
                       <span class="gist-created-updated">
-                        <%= snippet.created_at %>
+                        <%= distance_of_time_in_words(Time.now, snippet.created_at) %>
                       </span>
                     </div>
                     <div class="gist-flags">
@@ -220,8 +220,21 @@
                     </span>
                   </div>
                 </div>
+                <script type="text/javascript">
+                  $('.split-view-list .split-gist').click(function(){
+                    document.location.href = '/developer/snippets/' + $(this).attr('data-id');
+                  });
+                </script>
                 <% end %>
               </div>
+              <script type="text/javascript">
+              $('.split-view-list .split-gist').hover(function(){
+                $(this).addClass('gist-hovered');
+              }, function(){
+                $(this).removeClass('gist-hovered');
+              })
+              </script>
+
             </div>
             <div class="split-view-content" style="height: 435px; width: 705px;">
               <%= yield %>
