--- a/back-end/app/views/developer/snippets/_form.html.erb
+++ b/back-end/app/views/developer/snippets/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@snippet, url: developer_snippets_path) do |f| %>
+<%= form_for [:developer, @snippet] do |f| %>
 <div class="focus-view-header" style="height: 54px">
   <div class="focus-view-header-name" style="width: 556px;">
     New Gist
@@ -32,7 +32,7 @@
 
 <script type="text/javascript">
 var editor = ace.edit("editor");
-  // editor.setTheme("ace/theme/monokai");
+  editor.setTheme("ace/theme/github");
   editor.getSession().setMode("ace/mode/ruby");
 
   editor.getSession().on('change', function(e) {
