--- a/back-end/app/views/developer/snippets/show.html.erb
+++ b/back-end/app/views/developer/snippets/show.html.erb
@@ -15,11 +15,11 @@
     <div class="focus-view-header-controls">
       <div class="focus-view-header-controls-left">
         <div class="btn-group">
-          <button class="btn btn-secondary btn-sm tip-top edit-gist">
-          <i class="fa fa-pencil">
-          </i>
-          Edit
-          </button>
+          <%= link_to edit_developer_snippet_path(@snippet.id), class: 'btn btn-secondary btn-sm tip-top edit-gist' do%>
+            <i class="fa fa-pencil">
+            </i>
+            Edit
+          <% end %>
           <button class="btn btn-secondary btn-sm tip-top delete-gist" data-hasqtip="true" oldtitle="Delete Gist">
           <i class="fa fa-trash">
           </i>
