setup and config react

--- a/back-end/app/views/layouts/developer.html.erb
+++ b/back-end/app/views/layouts/developer.html.erb
@@ -9,6 +9,7 @@
     <%= csrf_meta_tags %>
   </head>
   <body>
+    <%= react_component('DeveloperApp') %>
     <div class="developer-layout">
       <header class="navbar navbar-fixed-top navbar-light bg-faded header-view-container">
         <a class="navbar-brand" href="#">
