--- a/back-end/app/views/layouts/developer.html.erb
+++ b/back-end/app/views/layouts/developer.html.erb
@@ -9,241 +9,6 @@
     <%= csrf_meta_tags %>
   </head>
   <body>
-    <%= react_component('DeveloperApp') %>
-    <div class="developer-layout">
-      <header class="navbar navbar-fixed-top navbar-light bg-faded header-view-container">
-        <a class="navbar-brand" href="#">
-          Code Pieces
-        </a>
-        <div class="header-controls">
-          <a href="#">
-            <i class="material-icons">
-            settings
-            </i>
-          </a>
-          <a href="#">
-            <i class="material-icons">
-            help
-            </i>
-          </a>
-          <a href="#">
-            <i class="material-icons fa-rotate-90">
-            autorenew
-            </i>
-          </a>
-        </div>
-        <div class="header-divider">
-        </div>
-        <div class="input-group header-searchbox">
-          <input class="form-control" placeholder="Search for..." type="text">
-          <span class="input-group-btn">
-            <button class="btn btn-secondary" type="button">
-            <i class="material-icons icon-search">
-            search
-            </i>
-            </button>
-          </span>
-          </input>
-        </div>
-        <div class="nav navbar-nav pull-right">
-          <%= link_to 'Sign out', auth_logout_path, class:'nav-link sign-out', method: :delete %>
-        </div>
-        <div class="header-nav">
-          <div class="nav navbar-nav pull-right">
-            <a class="nav-item nav-link " href="#">
-              <i aria-hidden="true" class="fa fa-gratipay">
-              </i>
-              GitTip Us
-              <span class="sr-only">
-                (current)
-              </span>
-            </a>
-            <a class="nav-item nav-link" href="#">
-              <i aria-hidden="true" class="fa fa-scissors">
-              </i>
-              Clipper
-            </a>
-            <a class="nav-item nav-link header-gistbox-clipper">
-            </a>
-            <a class="nav-item nav-link" href="#">
-              <i aria-hidden="true" class="fa fa-github">
-              </i>
-              <%= current_user.name %>
-            </a>
-          </div>
-        </div>
-      </header>
-      <div class="main-view-container">
-        <div class="sidebar-container">
-          <div class="context-container">
-            <div class="context-selector">
-              <img src="https://avatars.githubusercontent.com/u/6060163?v=3">
-              <span class="context-selector-name">
-                Personal Library
-              </span>
-              <i class="fa fa-caret-down">
-              </i>
-              <span class="context-select-spinner" style="display: none;">
-              </span>
-              <div class="context-selector-dropdown" style="display: none;">
-                <ul>
-                  <li class="context-selector-personal-library context-selector-item-selected">
-                    <img src="https://avatars.githubusercontent.com/u/6060163?v=3">
-                    <span>
-                      Personal Library
-                    </span>
-                    </img>
-                  </li>
-                  <li class="context-selector-start-new-group">
-                    <i class="icon-plus-sign-alt">
-                    </i>
-                    <span>
-                      Start New Group
-                    </span>
-                  </li>
-                </ul>
-              </div>
-              </img>
-            </div>
-          </div>
-          <ul class="sidebar">
-            <li class="sidebar-new-gist tip-right">
-              <%= link_to new_developer_snippet_path do %>
-                <i class="fa fa-file-o"></i> New Gist
-              <% end %>
-            </li>
-            <li class="sidebar-my-gists sidebar-selected" data-url="library/my-gists">
-              <i class="fa fa-list">
-              </i>
-              My Gists
-              <span class="sidebar-count">
-                1
-              </span>
-            </li>
-            <li class="sidebar-starred-gists" data-url="library/starred">
-              <i class="fa fa-star">
-              </i>
-              Starred
-              <span class="sidebar-count">
-                0
-              </span>
-            </li>
-            <li class="sidebar-spacer">
-            </li>
-            <li class="sidebar-labels-heading">
-              <i class="fa fa-tags">
-              </i>
-              Labels
-              <span class="new-label-container">
-                <i class="fa fa-plus tip-top new-label" data-hasqtip="true" oldtitle="New Label">
-                </i>
-              </span>
-            </li>
-            <li class="sidebar-labels-container">
-              <ul class="sidebar-labels ui-sortable">
-                <li class="sidebar-label ui-droppable" data-label-id="1460472900525">
-                  <span class="sidebar-label-grapple">
-                  </span>
-                  <i class="fa fa-caret-square-o-down">
-                  </i>
-                  <span class="sidebar-label-name">
-                    Important
-                  </span>
-                  <span class="sidebar-count">
-                    0
-                  </span>
-                </li>
-              </ul>
-            </li>
-          </ul>
-        </div>
-        <div class="content-container">
-          <div class="split-view">
-            <div class="split-view-list" >
-              <div class="split-view-filter-bar-container">
-                <div class="filter-bar">
-                  <div class="btn-group" data-toggle="buttons-radio">
-                    <button class="filter-all btn btn-secondary btn-sm active" type="button">
-                    All
-                    </button>
-                    <button class="filter-public btn btn-secondary btn-sm " type="button">
-                    Public
-                    </button>
-                    <button class="filter-private btn btn-secondary btn-sm " type="button">
-                    Private
-                    </button>
-                  </div>
-                  <div class="filter-bar-sorter">
-                    <a class="filter-active filter-by-created" href="#">
-                      <i class="icon-arrow-down">
-                      </i>
-                      Created
-                    </a>
-                    <a class="filter-by-updated" href="#">
-                      Updated
-                    </a>
-                  </div>
-                </div>
-              </div>
-              <div class="split-view-list-refresh-notice" style="display: none;">
-                Gists updated. Click to refresh.
-                <i class="icon-refresh">
-                </i>
-              </div>
-              <div class="split-view-list-gists" style="height: 600px">
-                <% @snippets.all.each do |snippet| %>
-                <div class="split-gist ui-draggable <%= selected_snippet_class(snippet)%>" data-id='<%= snippet.id %>'>
-                  <div class="split-gist-grapple">
-                  </div>
-                  <div class="split-gist-header">
-                    <%= image_tag snippet.user.avatar_url %>
-
-                    <div class="gist-meta">
-                      <div class="gist-name">
-                        <%= snippet.name %>
-                      </div>
-                      <span class="gist-created-updated">
-                        <%= distance_of_time_in_words(Time.now, snippet.created_at) %>
-                      </span>
-                    </div>
-                    <div class="gist-flags">
-                    </div>
-                    </img>
-                  </div>
-                  <div class="gist-description">
-                    <%= snippet.description %>
-                  </div>
-                  <div class="gist-labels">
-                    <i class="fa fa-tags">
-                    </i>
-                    <span class="gist-no-labels">
-                      No Labels
-                    </span>
-                  </div>
-                </div>
-                <script type="text/javascript">
-                  $('.split-view-list .split-gist').click(function(){
-                    document.location.href = '/developer/snippets/' + $(this).attr('data-id');
-                  });
-                </script>
-                <% end %>
-              </div>
-              <script type="text/javascript">
-              $('.split-view-list .split-gist').hover(function(){
-                $(this).addClass('gist-hovered');
-              }, function(){
-                $(this).removeClass('gist-hovered');
-              })
-              </script>
-
-            </div>
-            <div class="split-view-content" style="height: 435px; width: 705px;">
-              <%= yield %>
-            </div>
-          </div>
-        </div>
-
-      </div>
-    </div>
+    <%= react_component('DeveloperApp', apiKey: current_user.api_key ) %>
   </body>
 </html>
