add ui for add new snippet

--- a/back-end/app/assets/stylesheets/developer/main.scss
+++ b/back-end/app/assets/stylesheets/developer/main.scss
@@ -32,6 +32,7 @@ html {
 @import "./layout/_focusViewEdit";
 @import "./layout/_gistFile";
 @import "./components/_button";
+@import "./components/_newGistModal";
 
 .gist-no-labels {
     display: inline-block;
