add create features.

--- a/back-end/app/assets/stylesheets/developer/layout/_gistFile.scss
+++ b/back-end/app/assets/stylesheets/developer/layout/_gistFile.scss
@@ -5,7 +5,8 @@
 
 .gist-file .gist-file-header {
     position: relative;
-    padding: 12px 14px 11px 14px
+    padding: 12px 14px 11px 14px;
+    overflow: auto
 }
 
 .gist-file .gist-file-header .gist-file-name {
