Change gists to snippets, remove unused buttons

--- a/back-end/app/views/developer/snippets/_form.html.erb
+++ b/back-end/app/views/developer/snippets/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for [:developer, @snippet] do |f| %>
 <div class="focus-view-header" style="height: 54px">
   <div class="focus-view-header-name" style="width: 556px;">
-    New Gist
+    New Snippet
   </div>
   <div class="focus-view-header-right">
       <span class="edit-gist-spinner"></span>
