--- a/back-end/app/views/developer/snippets/show.html.erb
+++ b/back-end/app/views/developer/snippets/show.html.erb
@@ -40,7 +40,7 @@
           <i class="fa fa-twitter">
           </i>
           </button>
-          <button class="btn btn-secondary btn-sm tip-top share-gist" data-hasqtip="true" oldtitle="Export / Embed Gist">
+          <button class="btn btn-secondary btn-sm tip-top share-gist" data-hasqtip="true" oldtitle="Export / Embed Snippet">
           <i class="fa fa-share-square-o">
           </i>
           </button>
@@ -76,7 +76,7 @@
                 <%= @snippet.language.name %>
               </span>
               <div class="btn-group">
-                <button class="btn btn-secondary btn-sm copy-gist" data-clipboard-text='// Use Gists to store code you would like to remember later on
+                <button class="btn btn-secondary btn-sm copy-gist" data-clipboard-text='// Use Snippets to store code you would like to remember later on
                 console.log(window); // log the "window" object to the console
                 '>
                 <i class="fa fa-copy">
