--- a/back-end/app/views/layouts/developer.html.erb
+++ b/back-end/app/views/layouts/developer.html.erb
@@ -49,21 +49,6 @@
         </div>
         <div class="header-nav">
           <div class="nav navbar-nav pull-right">
-            <a class="nav-item nav-link " href="#">
-              <i aria-hidden="true" class="fa fa-gratipay">
-              </i>
-              GitTip Us
-              <span class="sr-only">
-                (current)
-              </span>
-            </a>
-            <a class="nav-item nav-link" href="#">
-              <i aria-hidden="true" class="fa fa-scissors">
-              </i>
-              Clipper
-            </a>
-            <a class="nav-item nav-link header-gistbox-clipper">
-            </a>
             <a class="nav-item nav-link" href="#">
               <i aria-hidden="true" class="fa fa-github">
               </i>
@@ -108,13 +93,13 @@
           <ul class="sidebar">
             <li class="sidebar-new-gist tip-right">
               <%= link_to new_developer_snippet_path do %>
-                <i class="fa fa-file-o"></i> New Gist
+                <i class="fa fa-file-o"></i> New Snippet
               <% end %>
             </li>
             <li class="sidebar-my-gists sidebar-selected" data-url="library/my-gists">
               <i class="fa fa-list">
               </i>
-              My Gists
+              My Snippets
               <span class="sidebar-count">
                 1
               </span>
@@ -162,7 +147,7 @@
                 </div>
               </div>
               <div class="split-view-list-refresh-notice" style="display: none;">
-                Gists updated. Click to refresh.
+                Snippets updated. Click to refresh.
                 <i class="icon-refresh">
                 </i>
               </div>
