--- a/back-end/app/views/snippets/_snippet.html.erb
+++ b/back-end/app/views/snippets/_snippet.html.erb
@@ -20,7 +20,7 @@
           </i>
           Edit
           </button>
-          <button class="btn btn-secondary btn-sm tip-top delete-gist" data-hasqtip="true" oldtitle="Delete Gist">
+          <button class="btn btn-secondary btn-sm tip-top delete-gist" data-hasqtip="true" oldtitle="Delete Snippet">
           <i class="fa fa-trash">
           </i>
           Delete
@@ -37,7 +37,7 @@
           <i class="fa fa-twitter">
           </i>
           </button>
-          <button class="btn btn-secondary btn-sm tip-top share-gist" data-hasqtip="true" oldtitle="Export / Embed Gist">
+          <button class="btn btn-secondary btn-sm tip-top share-gist" data-hasqtip="true" oldtitle="Export / Embed Snippet">
           <i class="fa fa-share-square-o">
           </i>
           </button>
@@ -70,7 +70,7 @@
   </div>
   <div class="focus-view-content" style="height: 298px;">
     <div class="focus-view-description">
-      Here are some things you can do with Gists in GistBox.
+      Here are some things you can do with Snippets in SnippetBox.
     </div>
     <div class="focus-view-files-container">
       <div>
@@ -88,7 +88,7 @@
                 JavaScript
               </span>
               <div class="btn-group">
-                <button class="btn btn-secondary btn-sm copy-gist" data-clipboard-text='// Use Gists to store code you would like to remember later on
+                <button class="btn btn-secondary btn-sm copy-gist" data-clipboard-text='// Use Snippets to store code you would like to remember later on
                 console.log(window); // log the "window" object to the console
                 '>
                 <i class="fa fa-copy">
@@ -108,7 +108,7 @@
           <div class="gist-file-code" style="display: block;">
                                     <pre>
                                                                       <code class="language-javascript">
-                                                                        // Use Gists to store code you would like to remember later on
+                                                                        // Use Snippets to store code you would like to remember later on
                                                                         console.log(window);
                                                                         // log the "window" object to the console
                                                                       </code>
