--- a/back-end/app/assets/stylesheets/developer/layout/_splitview.scss
+++ b/back-end/app/assets/stylesheets/developer/layout/_splitview.scss
@@ -1,41 +1,41 @@
 .split-view {
-    position: relative;
-    overflow: hidden;
-    height: 100%;
-}
+  display: flex;
+  flex: 1;
+  position: relative;
 
-.split-view .split-view-list {
+  .split-view-list {
+    display: flex;
+    flex-direction: column;
     width: 354px;
     border-right: 1px solid #ddd;
-    height: 100%;
-}
 
-.split-view .split-view-list .split-view-list-refresh-notice {
-    position: relative;
-    padding: 10px 15px;
-    background: #ffc;
-    border-bottom: 1px solid #ddd;
-    font-size: 13px;
-    font-weight: bold;
-    cursor: pointer
-}
+    .split-view-list-refresh-notice {
+      position: relative;
+      padding: 10px 15px;
+      background: #ffc;
+      border-bottom: 1px solid #ddd;
+      font-size: 13px;
+      font-weight: bold;
+      cursor: pointer;
 
-.split-view .split-view-list .split-view-list-refresh-notice:hover {
-    background: #ffffba
-}
+      &:hover {
+        background: #ffffba;
+      }
 
-.split-view .split-view-list .split-view-list-refresh-notice>i {
-    position: absolute;
-    top: 14px;
-    right: 15px
-}
+      > i {
+        position: absolute;
+        top: 14px;
+        right: 15px;
+      }
+    }
 
-.split-view .split-view-list .split-view-list-gists {
-    overflow-y: auto
-}
+    .split-view-list-gists {
+      flex: 1;
+      overflow-y: auto;
+    }
+  }
 
-.split-view .split-view-content {
-    position: absolute;
-    top: 0;
-    left: 355px
+  .split-view-content {
+    flex: 1;
+  }
 }
