finish remove namespace developer

--- a/back-end/app/views/developer/snippets/_form.html.erb
+++ b/back-end/app/views/developer/snippets/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for [:developer, @snippet] do |f| %>
+<%= form_for @snippet do |f| %>
 <div class="focus-view-header" style="height: 54px">
   <div class="focus-view-header-name" style="width: 556px;">
     New Gist
