--- a/back-end/app/views/developer/snippets/show.html.erb
+++ b/back-end/app/views/developer/snippets/show.html.erb
@@ -15,13 +15,13 @@
     <div class="focus-view-header-controls">
       <div class="focus-view-header-controls-left">
         <div class="btn-group">
-          <%= link_to edit_developer_snippet_path(@snippet.id), class: 'btn btn-secondary btn-sm tip-top edit-gist' do%>
+          <%= link_to edit_snippet_path(@snippet.id), class: 'btn btn-secondary btn-sm tip-top edit-gist' do%>
             <i class="fa fa-pencil">
             </i>
             Edit
           <% end %>
 
-          <%= link_to developer_snippet_path(@snippet.id), class: 'btn btn-secondary btn-sm tip-top delete-gist', method: :delete do%>
+          <%= link_to snippet_path(@snippet.id), class: 'btn btn-secondary btn-sm tip-top delete-gist', method: :delete do%>
             <i class="fa fa-trash">
             </i>
             Delete
